--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,8 @@
-<h1>Hello world</h1>
+<h3>Health Articles</h3>
+<ul>
+    {% for item_articles in health %}
+         <li>{{ item_articles.title }}</li>
+         <p>{{ item_articles.description }}</p>
+         <img src="{{item_articles.urlToImage}}" alt="">
+    {% endfor %}
+</ul>
