--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,4 +10,5 @@
     {% block content%}
     {% endblock %}
 </body>
-</html>
+</html> -->
+{% extends 'bootstrap/base.html' %}
