--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,5 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Articles</title>
-</head>
-<body>
-    {% block content%}
-    {% endblock %}
-</body>
-</html> -->
 {% extends 'bootstrap/base.html' %}
+
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
