--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,12 @@
 {% macro displayArticleList(article_list) %}
-    {% for article in article_list %}
-        <li>{{article.title}}</li>
-        <p>{{article.description}}</p>
-    {% endfor %}
+{% for article in article_list %}
+<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+    <img src="{{ article.urlToImage }}" alt="{{ article.title }} poster" class="img-responsive">
+    <li class="text-center">
+        <a href="/article/{{article.name}}">
+            {{ article.title|truncate(15)}}</a>
+    </li>
+</div>
+
+{% endfor %}
 {% endmacro %}
