--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -12,7 +12,8 @@
             <h3>{{ article.title }}</h3>
 
             <p class="description"> {{ article.description }}</p>
-            <p class=""> <b> {{ article.author }}</b> - <i>{{ article.publishedAt}}</i> </p>
+            <p class=""> <b> {{ article.author }}</b> 
+                <i>{{ article.publishedAt}}</i> </p>
 
 
         </div>
