--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,32 +1,28 @@
 {% macro displayArticleList(article_list) %}
 {% for article in article_list %}
-<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+<!-- <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
     <img src="{{ article.urlToImage }}" alt="{{ article.title }} poster" class="img-responsive">
     <p class="text-center">
-        <!-- <a href="/article/{{article.name}}"> -->
+        <a href="/article/{{article.name}}">
            <p>{{ article.title|truncate(30)}}</p>
     </li>
     <button><a href="{{article.url}}">Read More</a></button>
     <p>{{article.publishedAt}}</p>
-</div>
-<!-- <div class="container p-3 w-100">
-    <div class="col p-3">
-        <div class="card p-3">
-            <img src="{{article.urlToImage}}" alt="">
-            <div class="card-body">
-                <h3 class="card-title">{{article.title}}</h3>
-                <p class="card-text">{{article.description}}</p>
-                <p class="card-text text-center">{{article.publishedAt}}</p>
-                <a href="{{article.url}}" class="card-text text-center text-decoration-none">
-                    <div class="col-6 d-grid gap-2 mx-auto">
-                        <button class="btn btn-outline-success btn-lg" type="button">Go to Article</button>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-
 </div> -->
+<div>
+    <img src="{{article.urlToImage}}" alt="">
+    <div class="card-body">
+        <h3 class="card-title">{{article.title}}</h3>
+        <p class="card-text">{{article.description}}</p>
+        <p class="card-text text-primary">{{article.publishedAt}}</p>
+        <a href="{{article.url}}" class="card-text text-decoration-none">
+            <div class="col-6 d-grid gap-2 " style="padding-bottom:20px">
+                <button class="btn btn-outline-success btn-lg" type="button">Go to Article</button>
+            </div>
+        </a>
+    </div>
+</div>
+
 
 {% endfor %}
 {% endmacro %}
