--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-inverse" role="navigation" style="background-color: grey;">
-    <div class="container-fluid">
+<div class="navbar navbar-inverse" role="navigation" style="position: fixed; top:0; height: 32px; width: 100%; box-shadow: 8px;opacity: 0.75; backdrop-filter: blur(8px); z-index: 1;">
+    <div class="container-fluid" >
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
@@ -7,12 +7,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> Awesome News </a>
+            <a class="navbar-brand" href="/" style="color: white;"> Awesome News </a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="https://www.bbc.com/news">BBC</a></li>
+            <ul class="nav navbar-nav" >
+                <li><a href="/" style="color: white;">Home</a></li>
+                <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li>
             </ul>
         </div>
 
