create unittest for the article class

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,15 +7,15 @@
         {{ macro.displayArticleList(political)}}
     </ul> -->
     <div  style="max-width:100rem; margin-left:auto; margin-right:auto; overflow: hidden; padding-top:50px; z-index: 0;">
-        <h3>Health Articles</h3>
+        <h2 style="font-weight: bold;">Health Articles</h2>
         <ul>
             {{ macro.displayArticleList(health)}}
         </ul>
-        <h3>Technology Articles</h3>
+        <h2 style="font-weight: bold;">Technology Articles</h2>
         <ul>
             {{ macro.displayArticleList(technology)}}
         </ul>
-        <h3>Business Articles</h3>
+        <h2 style="font-weight: bold;">Business Articles</h2>
         <ul>
             {{ macro.displayArticleList(business)}}
         </ul>
