--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -10,7 +10,7 @@
     <p>{{article.publishedAt}}</p>
 </div> -->
 <div>
-    <img src="{{article.urlToImage}}" alt="">
+    <img src="{{article.urlToImage}}" alt="" style="box-shadow: 10px 10px 7px 12px lightblue;">
     <div class="card-body">
         <h3 class="card-title">{{article.title}}</h3>
         <p class="card-text">{{article.description}}</p>
