add changes made

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,6 +12,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" >
                 <li><a href="/" style="color: white;">Home</a></li>
+                <li><a href="" style="color: white;">Technology Articles</a></li>
                 <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li>
             </ul>
         </div>
