--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -14,6 +14,7 @@
     <div class="card-body">
         <h3 class="card-title">{{article.title}}</h3>
         <p class="card-text">{{article.description}}</p>
+        <p>Author-{{article.author}}</p>
         <p class="card-text text-primary">{{article.publishedAt}}</p>
         <a href="{{article.url}}" class="card-text text-decoration-none">
             <div class="col-6 d-grid gap-2 " style="padding-bottom:20px">
