create a list of the categories

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,8 +12,10 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" >
                 <li><a href="/" style="color: white;">Home</a></li>
-                <li><a href="" style="color: white;">Technology Articles</a></li>
-                <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li>
+                <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
+                    <button style="margin-top: 3%; background-color: black; border-radius: 25px;"><a href="/{{'category/technology'}}">Technology</a></button>
+                    <button style="margin-top: 3%;"><a href="/{{'category/business'}}">Business</a></button>
+                    <button style="margin-top: 3%;"><a href="/{{'category/health'}}">Health</a></button>
             </ul>
         </div>
 
