add styling to the category buttons

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,9 +13,9 @@
             <ul class="nav navbar-nav" >
                 <li><a href="/" style="color: white;">Home</a></li>
                 <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
-                    <button style="margin-top: 3%; background-color: black; border-radius: 25px;"><a href="/{{'category/technology'}}">Technology</a></button>
-                    <button style="margin-top: 3%;"><a href="/{{'category/business'}}">Business</a></button>
-                    <button style="margin-top: 3%;"><a href="/{{'category/health'}}">Health</a></button>
+                    <button style="margin-top: 3%; background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/health'}}">Health</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/business'}}">Business</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/technology'}}">Technology</a></button>
             </ul>
         </div>
 
