create a dropdown for sources

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,10 +12,24 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" >
                 <li><a href="/" style="color: white;">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                      Sources
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="https://www.bbc.com/news">BBC</a> <br>
+                      <a class="dropdown-item" href="https://www.aljazeera.com">ALJAZEERA</a> <br>
+                      <a class="dropdown-item" href="https://edition.cnn.com">CNN</a> <br>
+                      <a class="dropdown-item" href="https://news.sky.com">SKY NEWS</a> <br>
+                      <a class="dropdown-item" href="https://www.euronews.com">EURO-NEWS</a> <br>
+                      <a class="dropdown-item" href="https://www.ndtv.com">NDTV News</a> <br>
+                    </div>
+                </li>
                 <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
-                    <button style="margin-top: 3%; background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/health'}}">Health</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/business'}}">Business</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 7px 20px; border-radius: 25px;"><a style="color: black;" href="/{{'category/technology'}}">Technology</a></button>
+                    <button style="margin-top: 3%; background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/health'}}">Health</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/business'}}">Business</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/technology'}}">Technology</a></button>
+                    <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
             </ul>
         </div>
 
