--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 {% for category in category %}
-<h1>{{cat}} NEWS</h1>
-    <div>
-        <img src="{{category.urlToImage}}" alt="">
+<h1 class="text-uppercase" style="text-align: center;">{{cat}} NEWS</h1>
+    <div style="max-width:100rem; margin-left:auto; margin-right:auto; overflow: hidden; padding-top:50px; z-index: 0;">
+        <img src="{{category.urlToImage}}" style="box-shadow: 10px 10px 7px 12px lightblue;" alt="">
         <div class="card-body">
             <h3 class="card-title">{{category.title}}</h3>
             <p class="card-text">{{category.description}}</p>
