--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macro %}
 
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
 {% block content%}
     <!-- <h3 style="text-align: center;">Political Articles</h3>
     <ul>
