add an error page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,3 +3,6 @@
 {% block navbar %}
     {% include 'navbar.html' %}
 {% endblock %}
+{% block footer %}
+    {% include 'footer.html' %}
+{% endblock %}
