--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,13 +7,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="color: white;"> Awesome News </a>
+            <a class="navbar-brand" href="/" style="color: white; font-size: large;"> Awesome News </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" >
-                <li><a href="/" style="color: white;">Home</a></li>
+                <li><a href="/" style="color: white; font-size: large;">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                    <a  class="nav-link dropdown-toggle" style="color: white; font-size: large;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                       Sources
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -26,9 +26,9 @@
                     </div>
                 </li>
                 <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
-                    <button style="margin-top: 3%; background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/health'}}">Health</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/business'}}">Business</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: black;" href="/{{'category/technology'}}">Technology</a></button>
+                    <button style="margin-top: 3%; background-color: aquamarine;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/health'}}">Health</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/business'}}">Business</a></button>
+                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/technology'}}">Technology</a></button>
                     <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
             </ul>
         </div>
