--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 <!-- Content block -->
 {% block content %}
-<div class="container">
+<!-- <div class="container"> -->
 
     <!-- Poster background -->
     <div class="row">
@@ -11,7 +11,7 @@
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 article-details">
             <h3>{{ article.title }}</h3>
 
-            <p class="description"> {{ article.description }}</p>
+            <p class="description" style="color: aliceblue;"> {{ article.description }}</p>
             <p class=""> <b> {{ article.author }}</b> 
                 <i>{{ article.publishedAt}}</i> </p>
 
