--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,11 @@
         {{ macro.displayArticleList(political)}}
     </ul> -->
     <div  style="max-width:100rem; margin-left:auto; margin-right:auto; overflow: hidden; padding-top:50px; z-index: 0;">
-        <h2 style="font-weight: bold; color: aqua;">Health Articles</h2>
+        <h2 style="font-weight: bold; color: aqua;">General Articles</h2>
+        <ul>
+            {{ macro.displayArticleList(general)}}
+        </ul>
+        <!-- <h2 style="font-weight: bold; color: aqua;">Health Articles</h2>
         <ul>
             {{ macro.displayArticleList(health)}}
         </ul>
@@ -23,6 +27,6 @@
         <h2 style="font-weight: bold; color: aqua;">Business Articles</h2>
         <ul>
             {{ macro.displayArticleList(business)}}
-        </ul>
+        </ul> -->
     </div>
 {% endblock %}
