--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -8,13 +8,14 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/" style="color: white; font-size: large;"> Awesome News </a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav" >
-                <li><a href="/" style="color: white; font-size: large;">Home</a></li>
-                <li class="nav-item dropdown">
-                    <a  class="nav-link dropdown-toggle" style="color: white; font-size: large;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            <nav class="nav navbar-nav" style="display: flex;align-items: center;" >
+                <a href="/" class="navbar-brand" style="color: white; font-size: large;">Home</a>
+                <div class="navbar-brand nav-item dropdown">
+                    <a  class="nav-link dropdown-toggle" style="display:flex; align-items:center;color: white; font-size: large;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                       Sources
+                      <svg xmlns="http://www.w3.org/2000/svg" style="height: 20px; width: 20px; margin-left:4px; margin-right:-2px;" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                      </svg>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="https://www.bbc.com/news">BBC</a> <br>
@@ -23,14 +24,15 @@
                       <a class="dropdown-item" href="https://news.sky.com">SKY NEWS</a> <br>
                       <a class="dropdown-item" href="https://www.euronews.com">EURO-NEWS</a> <br>
                       <a class="dropdown-item" href="https://www.ndtv.com">NDTV News</a> <br>
+                      <a class="dropdown-item" href="https://nation.africa/kenya">NATION AFRICA</a> <br>
                     </div>
-                </li>
-                <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
-                    <button style="margin-top: 3%; background-color: aquamarine;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/health'}}">Health</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/business'}}">Business</a></button>
-                    <button style="margin-top: 3%;background-color: #56af4c;outline: none; padding: 6px 25px; border-radius: 25px;"><a style="color: white; font-size: large;" href="/{{'category/technology'}}">Technology</a></button>
-                    <!-- <li><a href="https://www.bbc.com/news" style="color: white;">BBC</a></li> -->
-            </ul>
+                </div>
+                <a class="navbar-brand" style="color: white; font-size: large;" href="/{{'category/health'}}">Health</a>
+                <a class="navbar-brand" style="color: white; font-size: large;" href="/{{'category/business'}}">Business</a>
+                <a class="navbar-brand" style="color: white; font-size: large;" href="/{{'category/technology'}}">Technology</a>
+            </nav>
+        </div>
+        <div class="navbar-header navbar-collapse collapse" >
         </div>
 
     </div>
